<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>can_interface_telegraf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jonas.otto@ipa.fraunhofer.de">Jonas Otto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>telegraf_ros_lib</depend>
  <depend>rclcpp</depend>
  <!-- <depend>libsocketcan-dev</depend> Add this once https://github.com/ros/rosdistro/pull/51354 is merged -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
