<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_influxdb</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jonas@jonasotto.com">jonas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>battery_monitoring_telegraf</depend>
  <depend>tf_telegraf</depend>
  <depend>bool_telegraf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>